--- a/data/www/Form.html
+++ b/data/www/Form.html
@@ -27,6 +27,7 @@
     </main>
 
     <script src="cominication.js"></script>
+    <script src="formHelper.js"></script>
     <script src="form.js"></script>
 </body>
 </html>
