add mouse icons

--- a/data/www/Form.html
+++ b/data/www/Form.html
@@ -15,9 +15,23 @@
 
             <!-- custom form -->
             <div class="form-group">
-                <label id="vraag-naam" for="naam">Wat is je naam?</label>
-                <input type="text" name="naam" id="naam" required>
+                <label for="z">zuur?</label>
+                <input type="number" name="SsC zuur" id="z" required>
             </div>
+            <div class="form-group">
+                <label for="b">biter?</label>
+                <input type="number" name="SsC bitter" id="b" required>
+            </div>           
+            <div class="form-group">
+                <label for="com">coment?</label>
+                <input type="text" name="final comment" id="com" required>
+            </div>
+
+            <div class="form-group">
+                <label for="leker">vindge lekereddr</label>
+                <input type="text" name="_leker" id="leker" required>
+            </div>
+            
             <!-- custom form -->
 
             <div class="form-group">
