--- a/data/www/thx.html
+++ b/data/www/thx.html
@@ -2,14 +2,68 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>bedankt man</title>
+    <title>Bedankt!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="form.css">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background: #f5f6f8;
+            color: #333;
+        }
+        main {
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .card {
+            background: #fff;
+            padding: 2.5rem 2rem;
+            border-radius: 16px;
+            max-width: 420px;
+            width: 100%;
+            text-align: center;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+        }
+        .logo {
+            max-width: 140px;
+            margin-bottom: 1.5rem;
+        }
+        h1 {
+            margin-bottom: 0.75rem;
+            font-size: 2rem;
+        }
+        p {
+            line-height: 1.6;
+            margin-bottom: 1.5rem;
+        }
+        .btn {
+            display: inline-block;
+            padding: 0.75rem 1.5rem;
+            background: #2563eb;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 999px;
+            font-weight: 600;
+            transition: background 0.2s ease;
+        }
+        .btn:hover {
+            background: #1e4ed8;
+        }
+    </style>
 </head>
 <body>
     <main>
-        <h1>Bedankt</h1>
-        <p>ge moet nu dit doen bla bla bla</p>
+        <div class="card">
+            <h1>Bedankt!</h1>
+            <p>
+                Alles is goed ontvangen. Ge moogt nu verdergaan met de volgende stap
+                of rustig wachten tot we u contacteren.
+            </p>
+            
+        </div>
     </main>
 </body>
 </html>
